docs: 文档与仓库配置同步